CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(MIXFACE)

ADD_SUBDIRECTORY(src)
FIND_PACKAGE( OpenCV REQUIRED)
ADD_SUBDIRECTORY(dlib dlib_build)
ADD_EXECUTABLE(main main.cpp)
SET(EXECUTABLE_OUTPUT_PATH ../bin)

TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(main dlib::dlib)
TARGET_LINK_LIBRARIES(main hello)
TARGET_LINK_LIBRARIES(main solver)
TARGET_LINK_LIBRARIES(main interpolation)
TARGET_LINK_LIBRARIES(main Matrix)
TARGET_LINK_LIBRARIES(main bsplines)



